# $Id: Changes,v 1.131 2004/07/23 13:56:46 petdance Exp $
Revision history for Perl extension WWW::Mechanize

        [DOCUMENTATION]
        * Added Ian Langworth's listmod and John Beppu's photobucket
          uploader programs to WWW::Mechanize::Examples.


1.03_01 Thu May 27 15:13:10 CDT 2004

        [ENHANCEMENTS] * Finally added a value() func.  Thanks to Spoon,
        who even now,
          months after his passing, is still contributing to Mechanize.


1.02    Tue Apr 13 22:45:10 CDT 2004

        No reason to install if you have 1.00.  Fixes are only in tests.

        [FIXES] * t/referer.t didn't cope with spaces in $FindBin::Bin.
        Plus,
          it now forces its URL to localhost.


1.00    Sat Apr 10 00:35:51 CDT 2004

        I figure it's about time we hit 1.00, and this version seems
        like a good place to do it, because of the potential breakage
        described below...

        [THINGS THAT WILL BREAK YOUR CODE] * Header handling has changed.
        There is no more package variable
          %headers that holds all the headers to be added.  They are
          now added on a per-object basis.

          If you were adding a header with add_header(), and the code
          relied on that header still being set later on in a later
          instance of the class, that code will now break, because the
          later instance won't have the header set.

        [ENHANCEMENTS] * You can now prevent a header from being sent
        by adding it with
          an undef value, as in:

            $mech->add_header( Referer => undef );

        [FIXES] * Now correctly adds Accept-Encoding to all requests
        that need it.

        [INTERNALS] * Added new $mech->_modify_request($req) method to
        do all the
          HTTP header modification before the actual request gets
          sent off.  Subclasses are able to override it if they want.

        * Removed the unused Compress::Zlib stuff.

