@@ -8,9 +8,10 @@ use warnings;
 use strict;
 use Test::More;
 use File::Spec;
+use LWP;
 
 plan skip_all => "Not installing mech-dump" if -e File::Spec->catfile( qw( t SKIP-MECH-DUMP ) );
-plan tests=>5;
+plan tests => 4;
 
 my $exe = File::Spec->catfile( qw( blib script mech-dump ) );
 if ( $^O eq "VMS" ) {
@@ -23,13 +24,29 @@ my $data = 'file:t/google.html';
 my $command = "$exe --forms $data";
 my $actual = `$command`;
 
-local $/ = undef;
-my $expected = <DATA>;
-isnt( $expected, "", "Got output from: $command" );
+my $expected;
+if ( $LWP::VERSION < 5.800 ) {
+    $expected = <<'EOF';
+GET file:/target-page [bob-the-form]
+  hl=en                           (hidden)
+  ie=ISO-8859-1                   (hidden)
+  q=
+  btnG=Google Search              (submit)
+  btnI=I'm Feeling Lucky          (submit)
+EOF
+} else {
+    $expected = <<'EOF';
+GET file:/target-page [bob-the-form]
+  hl=en                          (hidden readonly)
+  ie=ISO-8859-1                  (hidden readonly)
+  q=                             (text)
+  btnG=Google Search             (submit)
+  btnI=I'm Feeling Lucky         (submit)
+EOF
+}
 
 my @actual = split /\s*\n/, $actual;
 my @expected = split /\s*\n/, $expected;
-
 
 # First line is platform-dependent, so handle it accordingly.
 shift @expected;
@@ -40,12 +57,4 @@ cmp_ok( @expected, ">", 0, "Still some expected" );
 cmp_ok( @actual, ">", 0, "Still some actual" );
 
 is_deeply( \@actual, \@expected, "Rest of the lines match" );
-
-__DATA__
-GET file:/target-page [bob-the-form]
-  hl=en                           (hidden)
-  ie=ISO-8859-1                   (hidden)
-  q=
-  btnG=Google Search              (submit)
-  btnI=I'm Feeling Lucky          (submit)
 
